--- a/TestCSharpAndReact/Views/_ViewImports.cshtml
+++ b/TestCSharpAndReact/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using TestCSharpAndReact
+﻿@using React.AspNet
+@using TestCSharpAndReact
 @using TestCSharpAndReact.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
